--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -4,16 +4,16 @@
 </head>
 
 <body>
-<%- include('includes/navigation.ejs) %>
+   <%- include('includes/navigation.ejs') %>
 
-<main>
-    <form class="product-form" action="/admin/add-product" method="POST">
-        <div class="form-control">
-            <label for="title">Title</label>
-            <input type="text" name="title" id="title">
-        </div>
+    <main>
+        <form class="product-form" action="/admin/add-product" method="POST">
+            <div class="form-control">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title">
+            </div>
 
-        <button class="btn" type="submit">Add Product</button>
-    </form>
-</main>
+            <button class="btn" type="submit">Add Product</button>
+        </form>
+    </main>
 <%- include('includes/end.ejs') %>
